--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redice | Matt Thomson</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="css/core.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/content.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <script src="https://cdn.jsdelivr.net/lodash/4.16.6/lodash.min.js"></script>
   </head>
   <body>
-    
+    <header>
+      <nav id="navigation">
+        <ul>
+          <li><a href="#">Links</a></li>
+          <li><a href="#">Links</a></li>
+          <li><a href="#">Links</a></li>
+          <li><a href="#">Links</a></li>
+          <li><a href="#">Links</a></li>
+          <li><a href="#">Links</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="content">
+      <p>Lorem ipsum dolor sit amet, est ex iracundia complectitur, at vel omnes iudico nominati. Facete singulis vituperatoribus in his, inermis admodum verterem cum ut. Qui no tibique platonem, est labores urbanitas at. Nec soleat mucius mnesarchum at, munere interpretaris et nam, id prima possit iuvaret pri. No vide minim vel, vitae definitiones duo id.</p>
+      <p>Ius impetus viderer omittantur an. Duo iudicabit delicatissimi et, no pri autem oratio interpretaris. Cum ut nostro suscipit, ea libris electram mel. Ea iudico scribentur qui, falli postea volumus vix ne.</p>
+      <p>Ponderum concludaturque mea et, postea recteque nec ex. Cum ei omnes iriure consetetur. Cu vim novum delicata mnesarchum, sea ea iudico epicurei democritum. Ex mea modus iisque, an mei bonorum offendit. Dico affert ancillae his ea.</p>
+      <p>Ea eam populo luptatum intellegat, ornatus molestiae cu sit. Graece dictas voluptatum his ei, te eos impetus definiebas, qui legere delicata concludaturque eu. Quas antiopam molestiae ex pro. Admodum placerat phaedrum ius no, percipit fabellas sapientem at mei. Eu causae maiorum quo, tale pertinax id nam, ad appetere ponderum ius.</p>
+      <p>Odio efficiendi ut mei, ipsum explicari repudiare mea et, vis cu elitr salutatus. An sit insolens imperdiet. Nec an copiosae sententiae, no vim maiorum mentitum, est melius conceptam conclusionemque ut. An cum consul honestatis.</p>
+      <p>Usu aperiri argumentum no. Dolor utinam scribentur mea an, mea eros eius lucilius ea. Pro et wisi falli, ut vel consul fabulas definitionem. Est ei omnium mandamus referrentur.</p>
+      <p>Timeam gubergren ad mei. Facer perpetua est et, diceret evertitur signiferumque ex vis. An eos integre democritum. Nec placerat conceptam omittantur ut, nam dolor legendos urbanitas ea.</p>
+      <p>Te eos aliquip diceret propriae, atomorum electram torquatos te cum. Commune constituto nec id, cu epicuri scripserit per. Ei vim ludus persius. Pro an quis etiam accusam, an illud detracto albucius pri. Eu vel natum homero, prompta maiorum incorrupte quo an.</p>
+      <p>Te eum tacimates consulatu repudiare, et modo liber vix. Eos ei dicunt malorum. Liber ceteros apeirian ei vix. Vidisse ornatus adolescens has cu, id vel liber tantas mollis, ut usu altera habemus apeirian. Has eu iriure volutpat hendrerit, ea paulo vulputate delicatissimi sit. Ex pri melius iracundia, in sit nibh primis.</p>
+      <p>Qui elitr vocent at. Novum timeam at usu, decore eligendi est at. Usu an vero docendi recusabo, solum dolores detraxit et qui. Vis ex exerci eligendi, id nulla graece voluptatum qui. Dicam dicunt saperet pro in.</p>
+      <p>Lorem ipsum dolor sit amet, est ex iracundia complectitur, at vel omnes iudico nominati. Facete singulis vituperatoribus in his, inermis admodum verterem cum ut. Qui no tibique platonem, est labores urbanitas at. Nec soleat mucius mnesarchum at, munere interpretaris et nam, id prima possit iuvaret pri. No vide minim vel, vitae definitiones duo id.</p>
+      <p>Ius impetus viderer omittantur an. Duo iudicabit delicatissimi et, no pri autem oratio interpretaris. Cum ut nostro suscipit, ea libris electram mel. Ea iudico scribentur qui, falli postea volumus vix ne.</p>
+      <p>Ponderum concludaturque mea et, postea recteque nec ex. Cum ei omnes iriure consetetur. Cu vim novum delicata mnesarchum, sea ea iudico epicurei democritum. Ex mea modus iisque, an mei bonorum offendit. Dico affert ancillae his ea.</p>
+      <p>Ea eam populo luptatum intellegat, ornatus molestiae cu sit. Graece dictas voluptatum his ei, te eos impetus definiebas, qui legere delicata concludaturque eu. Quas antiopam molestiae ex pro. Admodum placerat phaedrum ius no, percipit fabellas sapientem at mei. Eu causae maiorum quo, tale pertinax id nam, ad appetere ponderum ius.</p>
+      <p>Odio efficiendi ut mei, ipsum explicari repudiare mea et, vis cu elitr salutatus. An sit insolens imperdiet. Nec an copiosae sententiae, no vim maiorum mentitum, est melius conceptam conclusionemque ut. An cum consul honestatis.</p>
+      <p>Usu aperiri argumentum no. Dolor utinam scribentur mea an, mea eros eius lucilius ea. Pro et wisi falli, ut vel consul fabulas definitionem. Est ei omnium mandamus referrentur.</p>
+      <p>Timeam gubergren ad mei. Facer perpetua est et, diceret evertitur signiferumque ex vis. An eos integre democritum. Nec placerat conceptam omittantur ut, nam dolor legendos urbanitas ea.</p>
+      <p>Te eos aliquip diceret propriae, atomorum electram torquatos te cum. Commune constituto nec id, cu epicuri scripserit per. Ei vim ludus persius. Pro an quis etiam accusam, an illud detracto albucius pri. Eu vel natum homero, prompta maiorum incorrupte quo an.</p>
+      <p>Te eum tacimates consulatu repudiare, et modo liber vix. Eos ei dicunt malorum. Liber ceteros apeirian ei vix. Vidisse ornatus adolescens has cu, id vel liber tantas mollis, ut usu altera habemus apeirian. Has eu iriure volutpat hendrerit, ea paulo vulputate delicatissimi sit. Ex pri melius iracundia, in sit nibh primis.</p>
+      <p>Qui elitr vocent at. Novum timeam at usu, decore eligendi est at. Usu an vero docendi recusabo, solum dolores detraxit et qui. Vis ex exerci eligendi, id nulla graece voluptatum qui. Dicam dicunt saperet pro in.</p>
+      <p>Lorem ipsum dolor sit amet, est ex iracundia complectitur, at vel omnes iudico nominati. Facete singulis vituperatoribus in his, inermis admodum verterem cum ut. Qui no tibique platonem, est labores urbanitas at. Nec soleat mucius mnesarchum at, munere interpretaris et nam, id prima possit iuvaret pri. No vide minim vel, vitae definitiones duo id.</p>
+      <p>Ius impetus viderer omittantur an. Duo iudicabit delicatissimi et, no pri autem oratio interpretaris. Cum ut nostro suscipit, ea libris electram mel. Ea iudico scribentur qui, falli postea volumus vix ne.</p>
+      <p>Ponderum concludaturque mea et, postea recteque nec ex. Cum ei omnes iriure consetetur. Cu vim novum delicata mnesarchum, sea ea iudico epicurei democritum. Ex mea modus iisque, an mei bonorum offendit. Dico affert ancillae his ea.</p>
+      <p>Ea eam populo luptatum intellegat, ornatus molestiae cu sit. Graece dictas voluptatum his ei, te eos impetus definiebas, qui legere delicata concludaturque eu. Quas antiopam molestiae ex pro. Admodum placerat phaedrum ius no, percipit fabellas sapientem at mei. Eu causae maiorum quo, tale pertinax id nam, ad appetere ponderum ius.</p>
+      <p>Odio efficiendi ut mei, ipsum explicari repudiare mea et, vis cu elitr salutatus. An sit insolens imperdiet. Nec an copiosae sententiae, no vim maiorum mentitum, est melius conceptam conclusionemque ut. An cum consul honestatis.</p>
+      <p>Usu aperiri argumentum no. Dolor utinam scribentur mea an, mea eros eius lucilius ea. Pro et wisi falli, ut vel consul fabulas definitionem. Est ei omnium mandamus referrentur.</p>
+      <p>Timeam gubergren ad mei. Facer perpetua est et, diceret evertitur signiferumque ex vis. An eos integre democritum. Nec placerat conceptam omittantur ut, nam dolor legendos urbanitas ea.</p>
+      <p>Te eos aliquip diceret propriae, atomorum electram torquatos te cum. Commune constituto nec id, cu epicuri scripserit per. Ei vim ludus persius. Pro an quis etiam accusam, an illud detracto albucius pri. Eu vel natum homero, prompta maiorum incorrupte quo an.</p>
+      <p>Te eum tacimates consulatu repudiare, et modo liber vix. Eos ei dicunt malorum. Liber ceteros apeirian ei vix. Vidisse ornatus adolescens has cu, id vel liber tantas mollis, ut usu altera habemus apeirian. Has eu iriure volutpat hendrerit, ea paulo vulputate delicatissimi sit. Ex pri melius iracundia, in sit nibh primis.</p>
+      <p>Qui elitr vocent at. Novum timeam at usu, decore eligendi est at. Usu an vero docendi recusabo, solum dolores detraxit et qui. Vis ex exerci eligendi, id nulla graece voluptatum qui. Dicam dicunt saperet pro in.</p>
+      <p>Lorem ipsum dolor sit amet, est ex iracundia complectitur, at vel omnes iudico nominati. Facete singulis vituperatoribus in his, inermis admodum verterem cum ut. Qui no tibique platonem, est labores urbanitas at. Nec soleat mucius mnesarchum at, munere interpretaris et nam, id prima possit iuvaret pri. No vide minim vel, vitae definitiones duo id.</p>
+      <p>Ius impetus viderer omittantur an. Duo iudicabit delicatissimi et, no pri autem oratio interpretaris. Cum ut nostro suscipit, ea libris electram mel. Ea iudico scribentur qui, falli postea volumus vix ne.</p>
+      <p>Ponderum concludaturque mea et, postea recteque nec ex. Cum ei omnes iriure consetetur. Cu vim novum delicata mnesarchum, sea ea iudico epicurei democritum. Ex mea modus iisque, an mei bonorum offendit. Dico affert ancillae his ea.</p>
+      <p>Ea eam populo luptatum intellegat, ornatus molestiae cu sit. Graece dictas voluptatum his ei, te eos impetus definiebas, qui legere delicata concludaturque eu. Quas antiopam molestiae ex pro. Admodum placerat phaedrum ius no, percipit fabellas sapientem at mei. Eu causae maiorum quo, tale pertinax id nam, ad appetere ponderum ius.</p>
+      <p>Odio efficiendi ut mei, ipsum explicari repudiare mea et, vis cu elitr salutatus. An sit insolens imperdiet. Nec an copiosae sententiae, no vim maiorum mentitum, est melius conceptam conclusionemque ut. An cum consul honestatis.</p>
+      <p>Usu aperiri argumentum no. Dolor utinam scribentur mea an, mea eros eius lucilius ea. Pro et wisi falli, ut vel consul fabulas definitionem. Est ei omnium mandamus referrentur.</p>
+      <p>Timeam gubergren ad mei. Facer perpetua est et, diceret evertitur signiferumque ex vis. An eos integre democritum. Nec placerat conceptam omittantur ut, nam dolor legendos urbanitas ea.</p>
+      <p>Te eos aliquip diceret propriae, atomorum electram torquatos te cum. Commune constituto nec id, cu epicuri scripserit per. Ei vim ludus persius. Pro an quis etiam accusam, an illud detracto albucius pri. Eu vel natum homero, prompta maiorum incorrupte quo an.</p>
+      <p>Te eum tacimates consulatu repudiare, et modo liber vix. Eos ei dicunt malorum. Liber ceteros apeirian ei vix. Vidisse ornatus adolescens has cu, id vel liber tantas mollis, ut usu altera habemus apeirian. Has eu iriure volutpat hendrerit, ea paulo vulputate delicatissimi sit. Ex pri melius iracundia, in sit nibh primis.</p>
+      <p>Qui elitr vocent at. Novum timeam at usu, decore eligendi est at. Usu an vero docendi recusabo, solum dolores detraxit et qui. Vis ex exerci eligendi, id nulla graece voluptatum qui. Dicam dicunt saperet pro in.</p>
+    </div>
+    <footer>
+      <div id="social">
+        <div>
+          <p>Twitter</p>
+          <p>Github</p>
+        </div>
+       </div>
+    </footer>
   </body>
 </html>
